.antlr/FileSystemParser.py
# Generated from FileSystem.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class FileSystemParser ( Parser ):

    grammarFileName = "FileSystem.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [  ]

    symbolicNames = [ "<INVALID>", "CREATE", "DELETE_FILE", "DELETE_DIR", 
                      "MKDIR", "CHDIR", "MOVE_FILE", "MOVE_DIR", "OPEN", 
                      "CLOSE", "WRITE_TO_FILE", "READ_FROM_FILE", "MOVE_WITHIN_FILE", 
                      "TRUNCATE_FILE", "LS", "SHOW_MEMORY_MAP", "EXIT", 
                      "INT", "ID", "STRING", "WS" ]

    RULE_root = 0
    RULE_command = 1
    RULE_create_cmd = 2
    RULE_delete_file_cmd = 3
    RULE_delete_dir_cmd = 4
    RULE_mkdir_cmd = 5
    RULE_chdir_cmd = 6
    RULE_move_file_cmd = 7
    RULE_move_dir_cmd = 8
    RULE_open_cmd = 9
    RULE_close_cmd = 10
    RULE_write_to_file_cmd = 11
    RULE_read_from_file_cmd = 12
    RULE_move_within_file_cmd = 13
    RULE_truncate_file_cmd = 14
    RULE_ls_cmd = 15
    RULE_show_memory_map_cmd = 16
    RULE_exit_cmd = 17
    RULE_path = 18
    RULE_open_mode = 19
    RULE_data = 20

    ruleNames =  [ "root", "command", "create_cmd", "delete_file_cmd", "delete_dir_cmd", 
                   "mkdir_cmd", "chdir_cmd", "move_file_cmd", "move_dir_cmd", 
                   "open_cmd", "close_cmd", "write_to_file_cmd", "read_from_file_cmd", 
                   "move_within_file_cmd", "truncate_file_cmd", "ls_cmd", 
                   "show_memory_map_cmd", "exit_cmd", "path", "open_mode", 
                   "data" ]

    EOF = Token.EOF
    CREATE=1
    DELETE_FILE=2
    DELETE_DIR=3
    MKDIR=4
    CHDIR=5
    MOVE_FILE=6
    MOVE_DIR=7
    OPEN=8
    CLOSE=9
    WRITE_TO_FILE=10
    READ_FROM_FILE=11
    MOVE_WITHIN_FILE=12
    TRUNCATE_FILE=13
    LS=14
    SHOW_MEMORY_MAP=15
    EXIT=16
    INT=17
    ID=18
    STRING=19
    WS=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(FileSystemParser.CommandContext,0)


        def EOF(self):
            return self.getToken(FileSystemParser.EOF, 0)

        def getRuleIndex(self):
            return FileSystemParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = FileSystemParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.command()
            self.state = 43
            self.match(FileSystemParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def create_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Create_cmdContext,0)


        def delete_file_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Delete_file_cmdContext,0)


        def delete_dir_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Delete_dir_cmdContext,0)


        def mkdir_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Mkdir_cmdContext,0)


        def chdir_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Chdir_cmdContext,0)


        def move_file_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Move_file_cmdContext,0)


        def move_dir_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Move_dir_cmdContext,0)


        def open_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Open_cmdContext,0)


        def close_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Close_cmdContext,0)


        def write_to_file_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Write_to_file_cmdContext,0)


        def read_from_file_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Read_from_file_cmdContext,0)


        def move_within_file_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Move_within_file_cmdContext,0)


        def truncate_file_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Truncate_file_cmdContext,0)


        def ls_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Ls_cmdContext,0)


        def show_memory_map_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Show_memory_map_cmdContext,0)


        def exit_cmd(self):
            return self.getTypedRuleContext(FileSystemParser.Exit_cmdContext,0)


        def getRuleIndex(self):
            return FileSystemParser.RULE_command

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = FileSystemParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FileSystemParser.CREATE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.create_cmd()
                pass
            elif token in [FileSystemParser.DELETE_FILE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.delete_file_cmd()
                pass
            elif token in [FileSystemParser.DELETE_DIR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.delete_dir_cmd()
                pass
            elif token in [FileSystemParser.MKDIR]:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.mkdir_cmd()
                pass
            elif token in [FileSystemParser.CHDIR]:
                self.enterOuterAlt(localctx, 5)
                self.state = 49
                self.chdir_cmd()
                pass
            elif token in [FileSystemParser.MOVE_FILE]:
                self.enterOuterAlt(localctx, 6)
                self.state = 50
                self.move_file_cmd()
                pass
            elif token in [FileSystemParser.MOVE_DIR]:
                self.enterOuterAlt(localctx, 7)
                self.state = 51
                self.move_dir_cmd()
                pass
            elif token in [FileSystemParser.OPEN]:
                self.enterOuterAlt(localctx, 8)
                self.state = 52
                self.open_cmd()
                pass
            elif token in [FileSystemParser.CLOSE]:
                self.enterOuterAlt(localctx, 9)
                self.state = 53
                self.close_cmd()
                pass
            elif token in [FileSystemParser.WRITE_TO_FILE]:
                self.enterOuterAlt(localctx, 10)
                self.state = 54
                self.write_to_file_cmd()
                pass
            elif token in [FileSystemParser.READ_FROM_FILE]:
                self.enterOuterAlt(localctx, 11)
                self.state = 55
                self.read_from_file_cmd()
                pass
            elif token in [FileSystemParser.MOVE_WITHIN_FILE]:
                self.enterOuterAlt(localctx, 12)
                self.state = 56
                self.move_within_file_cmd()
                pass
            elif token in [FileSystemParser.TRUNCATE_FILE]:
                self.enterOuterAlt(localctx, 13)
                self.state = 57
                self.truncate_file_cmd()
                pass
            elif token in [FileSystemParser.LS]:
                self.enterOuterAlt(localctx, 14)
                self.state = 58
                self.ls_cmd()
                pass
            elif token in [FileSystemParser.SHOW_MEMORY_MAP]:
                self.enterOuterAlt(localctx, 15)
                self.state = 59
                self.show_memory_map_cmd()
                pass
            elif token in [FileSystemParser.EXIT]:
                self.enterOuterAlt(localctx, 16)
                self.state = 60
                self.exit_cmd()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Create_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(FileSystemParser.CREATE, 0)

        def path(self):
            return self.getTypedRuleContext(FileSystemParser.PathContext,0)


        def getRuleIndex(self):
            return FileSystemParser.RULE_create_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreate_cmd" ):
                return visitor.visitCreate_cmd(self)
            else:
                return visitor.visitChildren(self)




    def create_cmd(self):

        localctx = FileSystemParser.Create_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_create_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(FileSystemParser.CREATE)
            self.state = 64
            self.path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Delete_file_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELETE_FILE(self):
            return self.getToken(FileSystemParser.DELETE_FILE, 0)

        def path(self):
            return self.getTypedRuleContext(FileSystemParser.PathContext,0)


        def getRuleIndex(self):
            return FileSystemParser.RULE_delete_file_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDelete_file_cmd" ):
                return visitor.visitDelete_file_cmd(self)
            else:
                return visitor.visitChildren(self)




    def delete_file_cmd(self):

        localctx = FileSystemParser.Delete_file_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_delete_file_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(FileSystemParser.DELETE_FILE)
            self.state = 67
            self.path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Delete_dir_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELETE_DIR(self):
            return self.getToken(FileSystemParser.DELETE_DIR, 0)

        def path(self):
            return self.getTypedRuleContext(FileSystemParser.PathContext,0)


        def getRuleIndex(self):
            return FileSystemParser.RULE_delete_dir_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDelete_dir_cmd" ):
                return visitor.visitDelete_dir_cmd(self)
            else:
                return visitor.visitChildren(self)




    def delete_dir_cmd(self):

        localctx = FileSystemParser.Delete_dir_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_delete_dir_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(FileSystemParser.DELETE_DIR)
            self.state = 70
            self.path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mkdir_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MKDIR(self):
            return self.getToken(FileSystemParser.MKDIR, 0)

        def path(self):
            return self.getTypedRuleContext(FileSystemParser.PathContext,0)


        def getRuleIndex(self):
            return FileSystemParser.RULE_mkdir_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMkdir_cmd" ):
                return visitor.visitMkdir_cmd(self)
            else:
                return visitor.visitChildren(self)




    def mkdir_cmd(self):

        localctx = FileSystemParser.Mkdir_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mkdir_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(FileSystemParser.MKDIR)
            self.state = 73
            self.path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Chdir_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHDIR(self):
            return self.getToken(FileSystemParser.CHDIR, 0)

        def path(self):
            return self.getTypedRuleContext(FileSystemParser.PathContext,0)


        def getRuleIndex(self):
            return FileSystemParser.RULE_chdir_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChdir_cmd" ):
                return visitor.visitChdir_cmd(self)
            else:
                return visitor.visitChildren(self)




    def chdir_cmd(self):

        localctx = FileSystemParser.Chdir_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_chdir_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(FileSystemParser.CHDIR)
            self.state = 76
            self.path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Move_file_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.src = None # PathContext
            self.dest = None # PathContext

        def MOVE_FILE(self):
            return self.getToken(FileSystemParser.MOVE_FILE, 0)

        def path(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FileSystemParser.PathContext)
            else:
                return self.getTypedRuleContext(FileSystemParser.PathContext,i)


        def getRuleIndex(self):
            return FileSystemParser.RULE_move_file_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMove_file_cmd" ):
                return visitor.visitMove_file_cmd(self)
            else:
                return visitor.visitChildren(self)




    def move_file_cmd(self):

        localctx = FileSystemParser.Move_file_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_move_file_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(FileSystemParser.MOVE_FILE)
            self.state = 79
            localctx.src = self.path()
            self.state = 80
            localctx.dest = self.path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Move_dir_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.src = None # PathContext
            self.dest = None # PathContext

        def MOVE_DIR(self):
            return self.getToken(FileSystemParser.MOVE_DIR, 0)

        def path(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FileSystemParser.PathContext)
            else:
                return self.getTypedRuleContext(FileSystemParser.PathContext,i)


        def getRuleIndex(self):
            return FileSystemParser.RULE_move_dir_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMove_dir_cmd" ):
                return visitor.visitMove_dir_cmd(self)
            else:
                return visitor.visitChildren(self)




    def move_dir_cmd(self):

        localctx = FileSystemParser.Move_dir_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_move_dir_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(FileSystemParser.MOVE_DIR)
            self.state = 83
            localctx.src = self.path()
            self.state = 84
            localctx.dest = self.path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Open_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN(self):
            return self.getToken(FileSystemParser.OPEN, 0)

        def path(self):
            return self.getTypedRuleContext(FileSystemParser.PathContext,0)


        def open_mode(self):
            return self.getTypedRuleContext(FileSystemParser.Open_modeContext,0)


        def getRuleIndex(self):
            return FileSystemParser.RULE_open_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpen_cmd" ):
                return visitor.visitOpen_cmd(self)
            else:
                return visitor.visitChildren(self)




    def open_cmd(self):

        localctx = FileSystemParser.Open_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_open_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(FileSystemParser.OPEN)
            self.state = 87
            self.path()
            self.state = 88
            self.open_mode()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Close_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLOSE(self):
            return self.getToken(FileSystemParser.CLOSE, 0)

        def path(self):
            return self.getTypedRuleContext(FileSystemParser.PathContext,0)


        def getRuleIndex(self):
            return FileSystemParser.RULE_close_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClose_cmd" ):
                return visitor.visitClose_cmd(self)
            else:
                return visitor.visitChildren(self)




    def close_cmd(self):

        localctx = FileSystemParser.Close_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_close_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(FileSystemParser.CLOSE)
            self.state = 91
            self.path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Write_to_file_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.offset = None # Token

        def WRITE_TO_FILE(self):
            return self.getToken(FileSystemParser.WRITE_TO_FILE, 0)

        def path(self):
            return self.getTypedRuleContext(FileSystemParser.PathContext,0)


        def data(self):
            return self.getTypedRuleContext(FileSystemParser.DataContext,0)


        def INT(self):
            return self.getToken(FileSystemParser.INT, 0)

        def getRuleIndex(self):
            return FileSystemParser.RULE_write_to_file_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite_to_file_cmd" ):
                return visitor.visitWrite_to_file_cmd(self)
            else:
                return visitor.visitChildren(self)




    def write_to_file_cmd(self):

        localctx = FileSystemParser.Write_to_file_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_write_to_file_cmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(FileSystemParser.WRITE_TO_FILE)
            self.state = 94
            self.path()
            self.state = 95
            self.data()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FileSystemParser.INT:
                self.state = 96
                localctx.offset = self.match(FileSystemParser.INT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Read_from_file_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.start = None # Token
            self.size = None # Token

        def READ_FROM_FILE(self):
            return self.getToken(FileSystemParser.READ_FROM_FILE, 0)

        def path(self):
            return self.getTypedRuleContext(FileSystemParser.PathContext,0)


        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(FileSystemParser.INT)
            else:
                return self.getToken(FileSystemParser.INT, i)

        def getRuleIndex(self):
            return FileSystemParser.RULE_read_from_file_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead_from_file_cmd" ):
                return visitor.visitRead_from_file_cmd(self)
            else:
                return visitor.visitChildren(self)




    def read_from_file_cmd(self):

        localctx = FileSystemParser.Read_from_file_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_read_from_file_cmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(FileSystemParser.READ_FROM_FILE)
            self.state = 100
            self.path()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FileSystemParser.INT:
                self.state = 101
                localctx.start = self.match(FileSystemParser.INT)
                self.state = 102
                localctx.size = self.match(FileSystemParser.INT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Move_within_file_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.src = None # Token
            self.dest = None # Token
            self.size = None # Token

        def MOVE_WITHIN_FILE(self):
            return self.getToken(FileSystemParser.MOVE_WITHIN_FILE, 0)

        def path(self):
            return self.getTypedRuleContext(FileSystemParser.PathContext,0)


        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(FileSystemParser.INT)
            else:
                return self.getToken(FileSystemParser.INT, i)

        def getRuleIndex(self):
            return FileSystemParser.RULE_move_within_file_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMove_within_file_cmd" ):
                return visitor.visitMove_within_file_cmd(self)
            else:
                return visitor.visitChildren(self)




    def move_within_file_cmd(self):

        localctx = FileSystemParser.Move_within_file_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_move_within_file_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(FileSystemParser.MOVE_WITHIN_FILE)
            self.state = 106
            self.path()
            self.state = 107
            localctx.src = self.match(FileSystemParser.INT)
            self.state = 108
            localctx.dest = self.match(FileSystemParser.INT)
            self.state = 109
            localctx.size = self.match(FileSystemParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Truncate_file_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.size = None # Token

        def TRUNCATE_FILE(self):
            return self.getToken(FileSystemParser.TRUNCATE_FILE, 0)

        def path(self):
            return self.getTypedRuleContext(FileSystemParser.PathContext,0)


        def INT(self):
            return self.getToken(FileSystemParser.INT, 0)

        def getRuleIndex(self):
            return FileSystemParser.RULE_truncate_file_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTruncate_file_cmd" ):
                return visitor.visitTruncate_file_cmd(self)
            else:
                return visitor.visitChildren(self)




    def truncate_file_cmd(self):

        localctx = FileSystemParser.Truncate_file_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_truncate_file_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(FileSystemParser.TRUNCATE_FILE)
            self.state = 112
            self.path()
            self.state = 113
            localctx.size = self.match(FileSystemParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ls_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LS(self):
            return self.getToken(FileSystemParser.LS, 0)

        def getRuleIndex(self):
            return FileSystemParser.RULE_ls_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLs_cmd" ):
                return visitor.visitLs_cmd(self)
            else:
                return visitor.visitChildren(self)




    def ls_cmd(self):

        localctx = FileSystemParser.Ls_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_ls_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(FileSystemParser.LS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Show_memory_map_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW_MEMORY_MAP(self):
            return self.getToken(FileSystemParser.SHOW_MEMORY_MAP, 0)

        def getRuleIndex(self):
            return FileSystemParser.RULE_show_memory_map_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow_memory_map_cmd" ):
                return visitor.visitShow_memory_map_cmd(self)
            else:
                return visitor.visitChildren(self)




    def show_memory_map_cmd(self):

        localctx = FileSystemParser.Show_memory_map_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_show_memory_map_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(FileSystemParser.SHOW_MEMORY_MAP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exit_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXIT(self):
            return self.getToken(FileSystemParser.EXIT, 0)

        def getRuleIndex(self):
            return FileSystemParser.RULE_exit_cmd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExit_cmd" ):
                return visitor.visitExit_cmd(self)
            else:
                return visitor.visitChildren(self)




    def exit_cmd(self):

        localctx = FileSystemParser.Exit_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_exit_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(FileSystemParser.EXIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(FileSystemParser.STRING, 0)
